Minie library: bump version to 0.3.1 and update release-notes.md